[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/rooms.jpg" type="Texture" id=1]
[ext_resource path="res://common/Room.gd" type="Script" id=2]
[ext_resource path="res://assets/room_selected.png" type="Texture" id=3]
[ext_resource path="res://common/Constants.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/door.png" type="Texture" id=5]

[node name="Room" type="Node2D" groups=[
"selectable",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RoomSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 512, 512 )

[node name="SelectedSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Constants" parent="." instance=ExtResource( 4 )]

[node name="UpDoorSprite" type="Sprite" parent="."]
position = Vector2( 0, -190 )
texture = ExtResource( 5 )

[node name="RightDoorSprite" type="Sprite" parent="."]
position = Vector2( 190, 0 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="DownDoorSprite" type="Sprite" parent="."]
position = Vector2( 0, 190 )
rotation = 3.14159
texture = ExtResource( 5 )

[node name="LeftDoorSprite" type="Sprite" parent="."]
position = Vector2( -190, 0 )
rotation = -1.5708
texture = ExtResource( 5 )
